WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264245
text-decoration-thickness does not work in buttons but works in div
https://bugs.webkit.org/show_bug.cgi?id=264245
Summary
text-decoration-thickness does not work in buttons but works in div
Ulrich Maiershofer
Reported
2023-11-06 01:04:46 PST
Example:
https://jsfiddle.net/ymfq4o3r/19/
There are two elements with the same style a <button /> and a <div />. For both elements the same css class is set. The css class defines the properties 'text-decoration: underline' and 'text-decoration-thickness: 4px'. In the <div /> case it works properly like expected. In the <button /> case it does not work, but I would expect to be the same.
Attachments
Patch
(6.28 KB, patch)
2024-09-04 19:22 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(6.39 KB, patch)
2024-09-05 07:27 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-13 01:05:13 PST
<
rdar://problem/118320835
>
Tim Nguyen (:ntim)
Comment 2
2023-11-13 01:19:57 PST
Probably same regression range as
bug 250831
Artur Müller
Comment 3
2024-09-03 10:26:32 PDT
Any chance this could be addressed? Is there anything blocking this? It would be *wonderful* to get an update or a fix.
alan
Comment 4
2024-09-04 15:31:04 PDT
I think we are just missing this bit: "When specified on or propagated to a block container that establishes an inline formatting context, the decorations are propagated to an anonymous inline box that wraps all the in-flow inline-level children of the block container." from
https://drafts.csswg.org/css-text-decor-4/#line-decoration
alan
Comment 5
2024-09-04 19:22:12 PDT
Created
attachment 472457
[details]
Patch
alan
Comment 6
2024-09-05 07:27:30 PDT
Created
attachment 472465
[details]
[fast-cq]Patch
EWS
Comment 7
2024-09-05 08:54:32 PDT
Committed
283212@main
(3e4afc9d4244): <
https://commits.webkit.org/283212@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472465
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug