text-decoration-thickness does not work in buttons but works in div https://bugs.webkit.org/show_bug.cgi?id=264245

Reviewed by Antti Koivisto.

While the spec says:

..decoration styles specified on a block container that establishes an inline
formatting context are propagated to an anonymous inline box that wraps all the in-flow
inline-level children of the block container...

we don't have the concept of such inline level box across generated anonymous block containers.

e.g.
<div non-inherited decoration style e.g. underline thickness>
 this text should be underlined
 <div></div>
 even when nested, inside anonymous block containers
</div>

* LayoutTests/fast/block/css-line-clamp-simple.html:
* LayoutTests/fast/inline/decorating-box-style-with-anon-block-container-expected.html: Added.
* LayoutTests/fast/inline/decorating-box-style-with-anon-block-container.html: Added.
* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::decoratingBoxStyleForRootInlineBox):
(WebCore::TextBoxPainter<TextBoxPath>::collectDecoratingBoxesForTextBox):

Canonical link: https://commits.webkit.org/283212@main